erDiagram
    ACCOUNT ||--o{ TRANSACTION: has    
    USER ||--|{ ACCOUNT: owns
    PLANNED_TRANSACTION ||--|| TRANSACTION: has
    PLANNED_TRANSACTION ||--|| ACCOUNT: has
    ACCOUNT ||--|| CURRENCY: has
    TRANSACTION ||--|| CURRENCY: has
    CURRENCY_RATE_HISTORIC ||--|| CURRENCY: has

    ACCOUNT{
        int id
        string name
        float balance
    }

    USER{
        string name
    }

    TRANSACTION{
        string description
        float value
        data transactionDate        
        boolean isPlanned
    }

    PLANNED_TRANSACTION{
        date plannedData
    }

    CURRENCY{
        string name
        string symbol
        string iso_4217_code
    }

    CURRENCY_RATE_HISTORIC{
        date date
        float rate
    }